--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -7,24 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- Template Google Fonts -->
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap"
       rel="stylesheet"
-    />
-    <!--           Template CSS Files-->
-    <!--    <link href="/assets/css/preloader.min.css" rel="stylesheet"/>-->
-    <!--    <link href="/assets/css/circle.css" rel="stylesheet"/>-->
-    <!--    <link href="/assets/css/fm.revealator.jquery.min.css" rel="stylesheet"/>-->
-    <!--    <link href="/assets/css/style.css" rel="stylesheet"/>-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!--     CSS Skin File-->
-    <!--    <link href="/assets/css/skins/blue.css" rel="stylesheet"/>-->
+    /> -->
   </head>
   <body>
     <noscript>
